mlock ChangeLog


23.02.2015

mlock 0.4

-replaced crypto_scrypt call by libsodium's crypto_pwhash_scryptsalsa208sha256_ll

---
12.02.2015

mlock 0.3

-added optional QML GUI

---
21.11.2014

mlock 0.2

-added progress info output
-replaced ftell by ftello and fseek by fseeko
-added --pinentry flag

---
11.11.2014

mlock 0.1

-initial release