@@ -19,6 +19,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 #include <QGuiApplication>
 #include <QQmlEngine>
+
+#include <QTranslator>
+#include <QLocale>
+#include <QDir>
+
 #include <qqml.h>
 #include <QQmlApplicationEngine>
 
@@ -27,6 +32,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 int main(int argc, char *argv[])
 {
     QGuiApplication app(argc, argv);
+
+    QTranslator translator;
+    #ifdef DATA_DIR
+     translator.load(QString("%1/l10n/mlock_%2").arg(DATA_DIR).arg(QLocale::system().name()));
+    #else
+     translator.load(QString("%1/l10n/mlock_%2").arg(QDir::currentPath()).arg(QLocale::system().name()));
+    #endif
+    app.installTranslator(&translator);
 
     qmlRegisterType<MlockInterface>("de.andresimon", 1, 0, "MlockInterface");
 
