@@ -1,0 +1,167 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.1" language="de_DE">
+<context>
+    <name>main</name>
+    <message>
+        <source>Send your miniLock ID to others so they can encrypt files to you.&lt;br&gt;Encrypt files to friends using their miniLock IDs. &lt;br&gt;&lt;br&gt;Your email is only used to derive your miniLock ID -&lt;br&gt; it remains completely secret and anonymous.</source>
+        <translation>Sende deine MiniLock-ID an andere, damit sie Dateien für dich verschlüsseln&lt;br&gt;können.&lt;br&gt;Verschlüssele Dateien für andere mit deren MiniLock-IDs.&lt;br&gt;&lt;br&gt;Deine E-Mail Adresse wird nur verwendet, um deine MiniLock-ID zu&lt;br&gt;erzeugen - sie bleibt geheim und anonym.</translation>
+    </message>
+    <message>
+        <source>E-Mail address</source>
+        <translation>E-Mail Adresse</translation>
+    </message>
+    <message>
+        <source>Passphrase</source>
+        <translation>Kennwort</translation>
+    </message>
+    <message>
+        <source>Unlock</source>
+        <translation>Entsperren</translation>
+    </message>
+    <message>
+        <source>The passphrase must consist of several random words</source>
+        <translation>Das Kennwort muss aus mehreren zufälligen Wörtern bestehen</translation>
+    </message>
+    <message>
+        <source>The mail address must be set</source>
+        <translation>Die E-Mail Adresse muss eingegeben werden</translation>
+    </message>
+    <message>
+        <source>My MiniLock ID</source>
+        <translation>Meine MiniLock ID</translation>
+    </message>
+    <message>
+        <source>&lt;b&gt;Encrypt or decrypt file&lt;/b&gt;</source>
+        <translation>&lt;b&gt;Datei ver- oder entschlüsseln&lt;/b&gt;</translation>
+    </message>
+    <message>
+        <source>Save file in...</source>
+        <translation>Speichere Datei in...</translation>
+    </message>
+    <message>
+        <source>Destination directory</source>
+        <translation>Ausgabeverzeichnis</translation>
+    </message>
+    <message>
+        <source>Select an input file</source>
+        <translation>Wähle eine Eingabedatei</translation>
+    </message>
+    <message>
+        <source>A miniLock file will be automatically decrypted.&lt;br&gt;Any other file will be encrypted.</source>
+        <translation>Eine miniLock-Datei wird automatisch entschlüsselt.&lt;br&gt;Jede andere Datei wird verschlüsselt.</translation>
+    </message>
+    <message>
+        <source>Select a file to encrypt or decrypt.</source>
+        <translation>Wähle eine Datei zum ent- oder verschlüsseln.</translation>
+    </message>
+    <message>
+        <source>The destination file must be set</source>
+        <translation>Die Ausgabedatei muss eingegeben werden</translation>
+    </message>
+    <message>
+        <source>Encryption</source>
+        <translation>Verschlüsselung</translation>
+    </message>
+    <message>
+        <source>Who is allowed to open this file?</source>
+        <translation>Wer darf diese Datei lesen?</translation>
+    </message>
+    <message>
+        <source>Paste a miniLock ID for each person which needs access.</source>
+        <translation>Füge eine miniLock ID für jede Person ein, die Zugriff auf die Datei benötigt.</translation>
+    </message>
+    <message>
+        <source>Recipient miniLock ID #1</source>
+        <translation>Empfänger miniLock-ID #1</translation>
+    </message>
+    <message>
+        <source>Recipient miniLock ID #2</source>
+        <translation>Empfänger miniLock-ID #2</translation>
+    </message>
+    <message>
+        <source>Recipient miniLock ID #3</source>
+        <translation>Empfänger miniLock-ID #3</translation>
+    </message>
+    <message>
+        <source>Omit my miniLock ID (you won&apos;t be able to decrypt the file)</source>
+        <translation>Meine miniLock-ID auslassen (ich werde die Datei nicht entschlüsseln können)</translation>
+    </message>
+    <message>
+        <source>Encrypt file</source>
+        <translation>Datei verschlüsseln</translation>
+    </message>
+    <message>
+        <source>Could not decrypt the file.</source>
+        <translation>Konnte die Datei nicht entschlüsseln.</translation>
+    </message>
+    <message>
+        <source>Could not encrypt the file.</source>
+        <translation>Konnte die Datei nicht verschlüsseln.</translation>
+    </message>
+    <message>
+        <source>Could not open the file.</source>
+        <translation>Konnte die Datei nicht öffnen.</translation>
+    </message>
+    <message>
+        <source>Could not read the file.</source>
+        <translation>Konnte die Datei nicht lesen.</translation>
+    </message>
+    <message>
+        <source>Could not write the file.</source>
+        <translation>Konnte die Datei nicht schreiben.</translation>
+    </message>
+    <message>
+        <source>Could not calculate the hash of the file.</source>
+        <translation>Konnte den Hashwert der Datei nicht berechnen.</translation>
+    </message>
+    <message>
+        <source>Illegal minilock file format.</source>
+        <translation>Ungültiges miniLock-Dateiformat.</translation>
+    </message>
+    <message>
+        <source>No recipients defined.</source>
+        <translation>Keine Empfänger angegeben.</translation>
+    </message>
+    <message>
+        <source>Please choose a file</source>
+        <translation>Bitte Datei wählen</translation>
+    </message>
+    <message>
+        <source>Please choose the destination directory</source>
+        <translation>Bitte Ausgabeverzeichnis wählen</translation>
+    </message>
+    <message>
+        <source>Processing error</source>
+        <translation>Verarbeitungsfehler</translation>
+    </message>
+    <message>
+        <source>Could not process the file.</source>
+        <translation>Konnte die Datei nicht verarbeiten.</translation>
+    </message>
+    <message>
+        <source>Input validation error</source>
+        <translation>Eingabevalidierung fehlgeschlagen</translation>
+    </message>
+    <message>
+        <source>Invalid input.</source>
+        <translation>Ungültige EIngabe.</translation>
+    </message>
+    <message>
+        <source>Enter your email and passphrase</source>
+        <translation>Gib E-Mail Adresse und Kennwort ein</translation>
+    </message>
+    <message>
+        <source>mlock uses your email and passphrase to derive your &lt;b&gt;miniLock ID&lt;/b&gt;.</source>
+        <translation>mlock nutzt E-Mail Adresse und Kennwort um deine &lt;b&gt;miniLock-ID&lt;/b&gt; zu erzeugen.</translation>
+    </message>
+    <message>
+        <source>Select the destination directory</source>
+        <translation>Wähle das Ausgabeverzeichnis</translation>
+    </message>
+    <message>
+        <source>Select the output directory.</source>
+        <translation>Wähle das Ausgabeverzeichnis.</translation>
+    </message>
+</context>
+</TS>
